Create display, need to make equals work

--- a/index.html
+++ b/index.html
@@ -10,28 +10,36 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div class="grid">
-        <div class="buttons">
-            <div class="numbers">
-                <span>7</span>
-                <span>8</span>
-                <span>9</span>
-                <span>4</span>
-                <span>5</span>
-                <span>6</span>
-                <span>1</span>
-                <span>2</span>
-                <span>3</span>
-                <span>.</span>
-                <span>0</span>
-                <span>=</span>
-            </div>
+    <div class="calculator">
+        <div class="display">
+            <div class="upper"></div>
+            <div class="lower"></div>
+        </div>
 
-            <div class="operations">
-                <div>/</div>
-                <div>x</div>
-                <div>-</div>
-                <div>+</div>
+        <div class="grid">
+            <div class="buttons">
+                <button class="clear"> CLEAR</button>
+                
+                <button class="numbers">7</button>
+                <button class="numbers">8</button>
+                <button class="numbers">9</button>
+                <button class="operations">/</button>
+
+                <button class="numbers">4</button>
+                <button class="numbers">5</button>
+                <button class="numbers">6</button>
+                <button class="operations">x</button>
+
+                <button class="numbers">1</button>
+                <button class="numbers">2</button>
+                <button class="numbers">3</button>
+                <button class="operations">-</button>
+
+                <button class="decimal">.</button>
+                <button class="numbers">0</button>
+                <button class="equals">=</button>
+                <button class="operations">+</button>
+                
             </div>
         </div>
     </div>
