trying to string operations together

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
         <div class="grid">
             <div class="buttons">
-                <button class="clear"> CLEAR</button>
+                <button class="clear">CLEAR</button>
+                <button class="erase">ERASE</button>
                 
                 <button class="numbers">7</button>
                 <button class="numbers">8</button>
